Update version to trigger GitHub Pages rebuild

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>IPLC Evaluation Form</title>
     <!-- GitHub Pages Update Trigger -->
-    <meta name="version" content="4.0.0">
+    <meta name="version" content="4.0.
     
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
