--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPLC Evaluation Form</title>
+    <!-- Trigger rebuild -->
 </head>
 <body>
     <h1>IPLC Evaluation Form</h1>
