Update index.html with proper structure and links

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPLC Evaluation Form</title>
-    <!-- Trigger rebuild -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/noise-texture.css">
+    <link rel="icon" type="image/png" href="favicon_io/favicon-32x32.png">
 </head>
 <body>
-    <h1>IPLC Evaluation Form</h1>
-    <p>This is a test page for GitHub Pages deployment.</p>
+    <header>
+        <img src="assets/logo.png" alt="IPLC Logo" class="logo">
+        <h1>IPLC Evaluation Form</h1>
+    </header>
+    <main>
+        <!-- Add your main content here -->
+    </main>
+    <footer>
+        <p>&copy; 2025 IPLC. All rights reserved.</p>
+    </footer>
+    <script src="js/main.js"></script>
+    <script src="js/animations.js"></script>
+    <script src="js/dropdown-initializer.js"></script>
+    <script src="js/form-logic.js"></script>
+    <script src="js/nlp-logic.js"></script>
 </body>
 </html>
